Jn dge multimapper capture (#372)
* initial check in (untested on real data)

* Dumb bug fixed.

* Digitial expression handles map quality 3 reads reads better.  Added optimizations to perform on-disk sort more quickly.

* Digitial expression handles map quality 3 reads reads better.  Added optimizations to perform on-disk sort more quickly.

* Fixed primary/secondary alignment to return a primary read.

* Updated documentation for map quality setting for DigitalExpression programs.  These programs now support reads that do not uniquely map to the genome to mirror STARsolo read processing.

* Made FunctionalData hashable
Modified GeneFunctionProcessor deal with multiple reads that have the same functional tags.  This is needed for MetaGene expression
UMIIterator only compresses records for faster I/O if the reads aren't going to be retained for further processing

* IntelliJ warning cleanup

* IntelliJ warning cleanup